WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280430
Fix PLT without injected bundle with site isolation off
https://bugs.webkit.org/show_bug.cgi?id=280430
Summary
Fix PLT without injected bundle with site isolation off
Alex Christensen
Reported
2024-09-26 13:56:21 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-26 13:56:33 PDT
<
rdar://problem/136778475
>
Alex Christensen
Comment 2
2024-09-26 13:58:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34320
EWS
Comment 3
2024-09-26 21:45:17 PDT
Committed
284333@main
(5e9b936b502b): <
https://commits.webkit.org/284333@main
> Reviewed commits have been landed. Closing PR #34320 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug